# qt-yolo-infernece

./: CMakeLists.txt  README.md
WWXUI/: CMakeLists.txt
WWXUI/include/: InferencePage.h  inference.h  tools.h
WWXUI/src/: InferencePage.cpp  InferencePage.ui  inference.cpp  main.cpp
include/: homepage.h  inference.h  superhead.h  tools.h
src/: HomePage.cpp  HomePage.ui  InferencePage.cpp  inference.cpp  tools.cpp
